--- a/tp1_EDA.ipynb
+++ b/tp1_EDA.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Graficamos la distribución de la variable de salida.\n",
-    "dataset.TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%',figsize=(8,8))"
+    "dataset.TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%',figsize=(5,5))"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "id": "17a8ea9d",
    "metadata": {},
    "source": [
-    "Por otra parte, a partir de este histograma que refleja las cantidades de personas que contratan el seguro de viaje o no (TravelInsurance), con respecto a los ingresos anuales (AnnualIncome), podemos notar que existe una leve tendencia directamente proporcional entre la variable de entrada y la de salida. Si bien no es tan lineal esta relación, ya que hay ascensos y descensos, en general va creciendo la proporción de clientes que contratan y disminuyendo la proporción de los que no a medida que aumenta el ingreso."
+    "Por otra parte, a partir de este histograma que refleja las cantidades de personas que contratan el seguro de viaje o no (TravelInsurance), con respecto a los ingresos anuales (AnnualIncome), podemos notar que existe una leve tendencia directamente proporcional entre la variable de entrada y la de salida. Si bien no es tan lineal esta relación, ya que hay ascensos y descensos, en general va creciendo la proporción de clientes que contratan y disminuyendo la proporción de los que no, a medida que aumenta el ingreso."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "source": [
     "##### Variable: Age\n",
-    "En primer lugar analizaremos la distribución de los datos de la variable. En este caso, como podemos ver en el histograma, los clientes con 28 años son la mayoría (aproximadamente un cuarto del dataset). Es importante tenerlo en cuenta al comparar la edad con la variable de salida porque puede llegar a predecirla erróneamente, ya que se deja influenciar por esta gran cantidad. "
+    "En primer lugar analizaremos la distribución de los datos de la variable. En este caso, como podemos ver en el histograma, los clientes con 28 años son la mayoría (aproximadamente un cuarto del dataset). Es importante tenerlo en cuenta al comparar la edad con la variable de salida porque puede llegar a predecirla erróneamente, ya que se podría dejar influenciar por esta gran cantidad. "
    ]
   },
   {
@@ -205,7 +205,7 @@
    "metadata": {},
    "source": [
     "Con respecto a la edad de los clientes (Age) y teniendo en cuenta el histograma, podemos concluir que esta variable de entrada no mantiene una relación con la variable de salida (TravelInsurance), ya que en el gráfico no se observa ninguna tendencia. Esto quiere decir que la contratación de un seguro de viaje no va a depender, en gran medida, de la edad de los clientes de este dataset. Podríamos suponer, que esto puede deberse, en parte, a que la franja etaria que presenta el conjunto de datos es reducida, y no sabríamos por ejemplo, si un anciano contrataría o no un seguro en función de su edad.  \n",
-    "Por otro lado, si pudimos notar un aumento de la cantidad de clientes de 28 años que no compran el seguro, pero esto puede ser debido a la distribución de la variable, como mencionamos anteriormente."
+    "Por otro lado, sí pudimos notar un aumento de la cantidad de clientes de 28 años que no compran el seguro, pero esto puede ser debido a la distribución de la variable, como mencionamos anteriormente."
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "source": [
     "##### Variable: ChronicDiseases\n",
-    "Para analizar la distribución de esta variables debemos observar el siguiente gráfico. A partir de él podemos notar que el 28% de personas presentan enfermedades crónicas, mientras el 72% no. Esto demuestra que hay un desbalance en dicha variable, lo cual puede influir en el análisis de esta, con respecto a la variable de salida."
+    "Para analizar la distribución de esta variable debemos observar el siguiente gráfico. A partir de él podemos notar que el 28% de personas presentan enfermedades crónicas, mientras que el 72% no. Esto demuestra que hay un desbalance en dicha variable, lo cual puede influir en el análisis de esta, con respecto a la variable de salida."
    ]
   },
   {
@@ -242,8 +242,8 @@
     "spec1 = gridspec.GridSpec(ncols=2, nrows=1, figure=fig1)\n",
     "f1_ax1 = fig1.add_subplot(spec1[0,0])\n",
     "f1_ax2 = fig1.add_subplot(spec1[0,1])\n",
-    "dataset[dataset.ChronicDiseases==0].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f1_ax1, title='No sufre enfermedades', figsize=(5,5))\n",
-    "dataset[dataset.ChronicDiseases==1].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f1_ax2, title='Sufre enfermedades', figsize=(5,5))"
+    "dataset[dataset.ChronicDiseases==0].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f1_ax1, title='No sufre enfermedades', figsize=(7,7))\n",
+    "dataset[dataset.ChronicDiseases==1].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f1_ax2, title='Sufre enfermedades', figsize=(7,7))"
    ]
   },
   {
@@ -296,8 +296,8 @@
     "f2_ax1 = fig2.add_subplot(spec2[0,0])\n",
     "f2_ax2 = fig2.add_subplot(spec2[0,1])\n",
     "\n",
-    "dataset[dataset.FrequentFlyer=='Yes'].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f2_ax1, figsize=(5,5), title='Vuela frecuentemente')\n",
-    "dataset[dataset.FrequentFlyer=='No'].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f2_ax2, figsize=(5,5), title='No vuela frecuentemente')"
+    "dataset[dataset.FrequentFlyer=='Yes'].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f2_ax1, figsize=(7,7), title='Vuela frecuentemente')\n",
+    "dataset[dataset.FrequentFlyer=='No'].TravelInsurance.value_counts().plot.pie(autopct='%1.0f%%', ax=f2_ax2, figsize=(7,7), title='No vuela frecuentemente')"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "metadata": {},
    "source": [
     "Podemos agregar que no será necesario eliminar columnas duplicadas porque no hay.\n",
-    "Tampoco será necesario eliminar filas duplicadas, ya que debido a la estructura de este dataset, descartar filas que son iguales podría llegar a eliminar conocimiento útil para el modelo, porque a pesar de que pueda haber mas de una filas con los mismos valores, estos puede tratarse de datos de clientes diferentes."
+    "Tampoco será necesario eliminar filas duplicadas, ya que debido a la estructura de este dataset, descartar filas que son iguales podría llegar a eliminar conocimiento útil para el modelo, porque a pesar de que pueda haber mas de una fila con los mismos valores, estos podrían tratarse de datos de clientes diferentes."
    ]
   },
   {
@@ -758,9 +758,9 @@
     "f5_ax1 = fig5.add_subplot(spec5[0,0])\n",
     "f5_ax2 = fig5.add_subplot(spec5[0,1])\n",
     "f5_ax3 = fig5.add_subplot(spec5[0,2])\n",
-    "dataset.GraduateOrNot.value_counts().plot.pie(autopct='%1.0f%%', ax=f5_ax1, figsize=(7,7), title='Distribución')\n",
-    "dataset.EverTravelledAbroad.value_counts().plot.pie(autopct='%1.0f%%', ax=f5_ax2, figsize=(7,7), title='Distribución')\n",
-    "dataset.FrequentFlyer.value_counts().plot.pie(autopct='%1.0f%%', ax=f5_ax3, figsize=(7,7), title='Distribución')"
+    "dataset.GraduateOrNot.value_counts().plot.pie(autopct='%1.0f%%', ax=f5_ax1, figsize=(8,8), title='Distribución')\n",
+    "dataset.EverTravelledAbroad.value_counts().plot.pie(autopct='%1.0f%%', ax=f5_ax2, figsize=(8,8), title='Distribución')\n",
+    "dataset.FrequentFlyer.value_counts().plot.pie(autopct='%1.0f%%', ax=f5_ax3, figsize=(8,8), title='Distribución')"
    ]
   }
  ],
