Corrección selección del mejor modelo.

--- a/tp2_experimentation.ipynb
+++ b/tp2_experimentation.ipynb
@@ -588,23 +588,63 @@
    "id": "7af52736",
    "metadata": {},
    "source": [
-    "Finalmente, a partir de los valores anteriores, decidimos combinar estos cambios, probando con aquellos que mejoraban en mayor medida los valores del Accuracy. Entonces, trabajamos con 50 como cantidad de árboles, 3 como profundidad de cada árbol y 0,01 como learning rate. Llegamos a la conclusión de que, estos cambios en conjunto, no mejoran más de lo que lo hacen la cantidad de árboles y el learning rate por separado."
+    "Finalmente, a partir de los valores anteriores, decidimos combinar estos cambios, probando con aquellos que mejoraban en mayor medida los valores del Accuracy. Entonces, trabajamos con 50 como cantidad de árboles, 3 como profundidad de cada árbol y 0,01 como learning rate. Llegamos a la conclusión de que, estos cambios en conjunto, no mejoran más de lo que lo hacen la cantidad de árboles y el learning rate por separado.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a6cc3a",
+   "id": "6dcd6c10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gradient boosting n_tree=50, depth=3, lr=0,01\n",
-    "modelGradBoostMix = Pipeline([\n",
+    "# gradient boosting n_tree=50, depth=3 (default), lr=0,01\n",
+    "modelGradBoostMix50 = Pipeline([\n",
     "    ('mapper', mapper_scaller),\n",
-    "    ('classifier', GradientBoostingClassifier(n_estimators=50, max_depth=3, learning_rate=0.01, random_state=42))\n",
+    "    ('classifier', GradientBoostingClassifier(n_estimators=50, learning_rate=0.01, random_state=42))\n",
     "])\n",
-    "modelGradBoostMix.fit(train, train.travel_insurance)\n",
-    "evaluate_model(modelGradBoostMix, title='Gradient Boosting with n_tree=50, depth=3 and lr=0,01')"
+    "modelGradBoostMix50.fit(train, train.travel_insurance)\n",
+    "evaluate_model(modelGradBoostMix50, title='Gradient Boosting with n_tree=50, depth=3 and lr=0,01')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd6eea1c",
+   "metadata": {},
+   "source": [
+    "Por otra parte pudimos comprobar que el learning rate podría tener más peso que el número de estimadores para este caso, ya que mantienendo este hiperparámetro en 0,01 y aumentando la cantidad de árboles, el Accuracy se mantiene y recién comienza a bajar cuando dicha cantidad es muy grande."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e4e8080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gradient boosting n_tree=500, depth=3 (default), lr=0,01\n",
+    "modelGradBoostMix500 = Pipeline([\n",
+    "    ('mapper', mapper_scaller),\n",
+    "    ('classifier', GradientBoostingClassifier(n_estimators=500, learning_rate=0.01, random_state=42))\n",
+    "])\n",
+    "modelGradBoostMix500.fit(train, train.travel_insurance)\n",
+    "evaluate_model(modelGradBoostMix500, title='Gradient Boosting with n_tree=500, depth=3 and lr=0,01')\n",
+    "\n",
+    "# gradient boosting n_tree=750, depth=3 (default), lr=0,01\n",
+    "modelGradBoostMix750 = Pipeline([\n",
+    "    ('mapper', mapper_scaller),\n",
+    "    ('classifier', GradientBoostingClassifier(n_estimators=750, learning_rate=0.01, random_state=42))\n",
+    "])\n",
+    "modelGradBoostMix750.fit(train, train.travel_insurance)\n",
+    "evaluate_model(modelGradBoostMix750, title='Gradient Boosting with n_tree=750, depth=3 and lr=0,01')\n",
+    "\n",
+    "# gradient boosting n_tree=1000, depth=3 (default), lr=0,01\n",
+    "modelGradBoostMix1000 = Pipeline([\n",
+    "    ('mapper', mapper_scaller),\n",
+    "    ('classifier', GradientBoostingClassifier(n_estimators=1000, learning_rate=0.01, random_state=42))\n",
+    "])\n",
+    "modelGradBoostMix1000.fit(train, train.travel_insurance)\n",
+    "evaluate_model(modelGradBoostMix1000, title='Gradient Boosting with n_tree=1000, depth=3 and lr=0,01')"
    ]
   },
   {
@@ -612,7 +652,7 @@
    "id": "5a3f3757",
    "metadata": {},
    "source": [
-    "Por otra parte, para estos casos, el estimador Gradient Boosting sigue siendo la mejor opción a partir del valor del Accuracy obtenido."
+    "Para todos estos casos, en general, el estimador Gradient Boosting sigue siendo la mejor opción a partir del valor del Accuracy obtenido."
    ]
   },
   {
@@ -634,7 +674,7 @@
    "execution_count": null,
    "id": "7a8ed401",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -731,10 +771,9 @@
    "metadata": {},
    "source": [
     "#### Selección de un modelo y valor de la métrica a informar  \n",
-    "El modelo seleccionado fue el Gradient Boosting con [un learning rate de 0,01/una cantidad de estimadores igual a 50], ya que es el que mayor valor de Accuracy tuvo en el dataset de validation.  \n",
-    "Cabe aclarar que también fuimos controlando que el valor de Precision se mantenga en valores altos, si bien hubo un modelo que obtuvo una mejor Precision (por poco), lo que marcó la decisión fue la primera métrica mencionada, ya que es la que informaremos al cliente. De cualquier forma, obtuvimos buenos valores para ambas métricas, siendo aproximadamente un 0,8463 en Accuracy y un 0,9474 en Precision, para el dataset de validation. Esto quiere decir que el estimador acertó en un 84,63% de las predicciones y en un 94,74% de los ejemplos que predijo como verdaderos (es decir, de los clientes que predijo que iban a comprar el seguro, los que realmente lo hicieron).  \n",
-    "Para el caso del Precision, nos interesaría enfocarnos en ese 5,26%, que son aquellos casos que según el estimador iban a comprar, pero no lo hicieron. \n",
-    "Sin embargo, como mencionamos antes, la métrica más óptima para informarle al cliente es Accuracy, y este valor se obtiene del dataset de test. Entonces, **el valor a informar es del 84,63%** aproximadamente."
+    "El modelo seleccionado fue el Gradient Boosting con un learning rate de 0,01, ya que es el que mayor valor de Accuracy tuvo en el dataset de validation. Si bien, reducir el número de estimadores a 10 o 50 genera el mismo valor de la métrica, optamos por el modelo que altera dicho learning rate porque, en base a diferentes pruebas, vimos que tendría un mayor peso en cuánto a los demás hiperparámetros.  \n",
+    "Cabe aclarar que también fuimos controlando que el valor de Precision se mantenga en valores altos, si bien hubo un modelo que obtuvo una mejor Precision (por poco), lo que marcó la decisión fue la primera métrica mencionada, ya que es la que informaremos al cliente. De cualquier forma, obtuvimos buenos valores para ambas métricas, siendo aproximadamente un 0,8463 en Accuracy y un 0,9474 en Precision, para el dataset de validation. Esto quiere decir que el estimador acertó en un 84,63% de las predicciones y en un 94,74% de los ejemplos que predijo como verdaderos (es decir, de los clientes que predijo que iban a comprar el seguro, los que realmente lo hicieron). Para el caso del Precision, nos interesaría enfocarnos en ese 5,26%, que son aquellos casos que según el estimador iban a comprar, pero no lo hicieron.    \n",
+    "Sin embargo, como mencionamos antes, la métrica más óptima para informarle al cliente es Accuracy, y este valor se obtiene del dataset de test. Entonces, **el valor a informar es del 83,67%** aproximadamente."
    ]
   },
   {
@@ -744,8 +783,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_model(modelGradBoost0_01, title='Gradient Boosting with lr=0,01', set_names=('train', 'validation','test'))\n",
-    "evaluate_model(modelGradBoost50, title='Gradient Boosting with n_trees=50', set_names=('train', 'validation','test'))"
+    "evaluate_model(modelGradBoost0_01, title='Gradient Boosting with lr=0,01', set_names=('train', 'validation','test'))"
    ]
   }
  ],
